--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,21 @@
-body{
+body {
   padding: 0;
   margin: 0;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#root {
+  height: 100vh;
 }
